--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
 
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBRhbeklmJDqI7p_vt-xr0tWxbRyUOoAM"></script>
 
   </head>
   <body>
