--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
       <!--     Fonts and icons     -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-
-
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      
       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBRhbeklmJDqI7p_vt-xr0tWxbRyUOoAM"></script>
 
   </head>
