--- a/documentation/tutorial-components.html
+++ b/documentation/tutorial-components.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="../src/assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="../src/assets/img/favicon.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="../src/assets/img/SM.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="../src/assets/img/SM.png">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
