--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
 <html>
   <head>
       <meta charset="utf-8" />
-      <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-      <link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/SM.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="./assets/img/SM.png">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
       <meta name="viewport" content="width=device-width" />
@@ -35,6 +35,7 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       
       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBRhbeklmJDqI7p_vt-xr0tWxbRyUOoAM"></script>
+      <script type="text/javascript"  src="./assets/js/datatable.js"></script>
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
