--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
 <html>
   <head>
       <meta charset="utf-8" />
+      <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+      <meta http-equiv="Pragma" content="no-cache">
+      <meta http-equiv="Expires" content="0">
       <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/SM.png">
       <link rel="icon" type="image/png" sizes="96x96" href="./assets/img/SM.png">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
